<resources>
    <string name="app_name">MEDELA</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_new_user_name">User Name</string>
    <string name="hint_new_email">Email</string>
    <string name="hint_new_password">Password</string>
    <string name="hint_new_confirm_password">Confirm Password</string>
    <string name="hint_new_department">Department</string>
    <string name="hint_new_phone_number">Phone Number</string>
    <string name="hint_user_name">Student Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_gender">Gender</string>
    <string name="text_gender_male">Male</string>
    <string name="text_gender_female">Female</string>
    <string name="button_sign_up">Register</string>
    <string name="button_sign_in">Login</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_new_account">Create New Account</string>
    <string name="text_login_instead">Login Instead</string>
    <string name="text_enter_email_for_password_reset">Enter your registered email to reset password</string>

    <string name="title_activity_landing">Landing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="text_profile_bio">BIO</string>
    <string name="text_profile_health">MEDICAL</string>
    <string name="text_profile_shipping">SHIPPING</string>
    <string name="text_profile_allergies">Allergies</string>

    <string name="menu_home">Home</string>
    <string name="menu_find_drug">Find Drug</string>
    <string name="menu_drug_history">History</string>
    <string name="menu_profile">Profile</string>

    <string name="txt_drug_manufactured">Manufactured By: </string>

    <string name="txt_dosage">Dosage</string>
    <string name="txt_dosage_adult">Adult</string>
    <string name="txt_dosage_children">Children</string>

    <string name="txt_stores_avail">Stores Available In</string>

    <string name="btn_purchase">Purchase</string>
    <string name="btn_cancel">Cancel</string>

    <string name="menu_logout">Logout</string>

    <string name="menu_utilities">Utilities</string>
</resources>