<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/menu_home"
    app:startDestination="@id/nav_drug_history">
    <fragment
        android:id="@+id/nav_find_drug"
        android:name="com.androidstrike.medela.landing.fragments.Search"
        android:label="@string/menu_find_drug"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/nav_drug_history"
        android:name="com.androidstrike.medela.landing.fragments.History"
        android:label="@string/menu_drug_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.androidstrike.medela.landing.fragments.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>